Changes in 1.8.1 (not yet released)

 - Fix compile problem with CIrrDeviceSDL on VS2008 (and maybe other systems). Thanks @HellFlip for reporting.
 - Fix quaternion::rotationFromTo() (Thanks @takamoto for reporting)
 - Fix iszero for s64 (Thanks @chronologicaldot for reporting)
 - Fix crash in SoftwareDriver2 when Material was EMT_DETAIL_MAP but texture[1] was not set (Thanks for fix by chronologicaldot)
 - Fix buffer overrun in x-loader (Thanks for fix by Otaka)
 - Fix cursor visibility update problem under Windows 8 (Thanks @luthyr for reporting)
 - Fix irredit links in loadScene/saveScene docs.
 - Fix issue in CAnimatedMeshSceneNode::clone which cause crash. (reported and fixed by luthyr)
 - Fix compiling errors for c++ builder (thx @Greatwolf for many patches and @cfanderek for reminding)
 - Initialized IColladaMeshWriter::GeometryWriting which was uninitialized.
 - Fix linker trouble with irr::core::equalsByUl when compiling Irrlicht as managed code (thx @  Memorial76 for a report + testcase)
 - Fix crashes in CCubeSceneNode::clone and CSphereSceneNode::clone (reported by  marsupial)
 - Fix the clipping in the listbox drawing which was only showing the right line of the sunken pane (reported by Mloren and Abraxas).
 - Initialize slider in example 05 correct (reported by Zerochen)
 - Fix crash in CMeshSceneNode::clone when the mesh had no shadow (reported by  christianclavet, bug-fix found by Nadro)

--------------------------
Changes in 1.8 (7.11.2012)

 - Let sphere mesh use full opaque color, just as all the other ones do

 - Gcc on Win32 (MinGW) now also works with the _w file access functions when compiled with _IRR_WCHAR_FILESYSTEM. (thx @ alexzk for reporting compile troubles)

 - Fix a bunch of off-by one errors in irr::core::string in functions equals_substring_ignore_case, findFirst, findFirstChar, findNext, findLast, findLastChar, replace, remove and removeChars.